<resources>
    <string name="app_name">教务小助手</string>

    <string name="activity_empty">您还没有登录教务管理系统！\n请先点击左上角在左侧登录然后再进行操作！</string>
    <string name="lib_need_login">您还没有登录图书馆!\n请点击下方圆形按钮先进行登录或输入验证码刷新登录！</string>
    <string name="sport_need_login">您还没有登录体测系统!\n请点击下方圆形按钮先进行登录或输入验证码刷新登录！</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_number">请输入学号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_code">请输入验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_number">学号错误！</string>
    <string name="error_invalid_password">密码无效！</string>
    <string name="error_login_error">密码或验证码错误！</string>
    <string name="error_invalid_code">验证码无效！</string>
    <string name="error_incorrect_code">验证码错误！</string>
    <string name="error_field_required">请填写学号</string>
    <string name="dialog_title">请输入验证码重新登录</string>
    <string name="permission_rationale">"请允许必要权限"
    </string>
    <string name="default_titlebar_title">这里是标题</string>

    <!-- 帮助页面 -->
    <string name="help_page_title">帮助</string>
    <string name="help_1">1、首次进入程序需要点击登录按钮进行登录；</string>
    <string name="help_2">2、默认状态下隐藏了菜单，可以点击屏幕右侧红色箭头显示菜单；</string>
    <string name="help_3">3、在下拉选择框中选择学年，学期等信息，然后点击按钮即可检索；</string>
    <string name="help_4">4、其中成绩和考试安排检索格式为图片，单击可以详细放大查看；</string>
    <string name="help_5">5、在详细查看图片界面，点击右上角菜单可以选择保存；</string>
    <string name="help_6">5.5、如果保存失败请在应用程序设置中给予本程序存储权限；</string>
    <string name="help_7">6、退出程序再次进入时默认保存了用户名和密码，直接检索信息即可；</string>
    <string name="help_8">6.1、再次进入程序时；直接拉取成绩以及考试安排可能会出现表情包</string>
    <string name="help_9">6.2、别惊讶，偷偷保存就行啦，这是大礼包；</string>
    <string name="help_10">6.3、想再次查看成绩可点击按钮旁的“ 刷新登录信息 ”；</string>
    <string name="help_11">6.4、其实上面说的都是废话；</string>
    <string name="help_12">6.5、有时候运气好程序自己都会觉得你没登录让你等登录；</string>
    <string name="help_13">6.6、这个时候也不用慌啦，就输个验证码就行 ╮(╯▽╰)╭ ；</string>
    <string name="help_14">7、API最低限制的是Android 4.4，但是少部分机型会闪退，建议5.0系统及以上使用；</string>
    <string name="help_15">8、如果bug反馈请联系：1098832322@qq.com；</string>
    <string name="help_16">8.1、（心情好就去改）￣ω￣=；</string>
    <string name="help_17">8.2、还有几个小想法，以后有时间再加新功能好啦；</string>

    <!-- 关于页面 -->
    <string name="about_title">关于</string>
    <string name="about_text1">教务小助手</string>
    <string name="about_text2">为了毕设才更新的2.0版本  (=´ω｀=) </string>
    <string name="about_text3">引用接口：</string>
    <string name="about_text4">江大小助手：</string>
    <string name="about_text5">http://wishes-blog.cn/</string>

    <!--教务系统相关的几个二级菜单页面-->
    <string name="jwsys_grade_title">成绩查询</string>
    <string name="jwsys_onekey_title">一键评教</string>
    <string name="jwsys_test_title">考试安排</string>
    <string name="jwsys_classtable_title">课表查询</string>

    <!--下拉框数据-->
    <string-array name="xuenian">
        <item>2017-2018学年</item>
        <item>2016-2017学年</item>
        <item>2015-2016学年</item>
        <item>2014-2015学年</item>
        <item>2013-2014学年</item>
    </string-array>

    <string-array name="xueqi">
        <item>第一学期</item>
        <item>第二学期</item>
    </string-array>

    <string-array name="chengji">
        <item>原始成绩</item>
        <item>有效成绩</item>
    </string-array>

    <string-array name="geshi">
        <item>格式一</item>
        <item>格式二</item>
    </string-array>


    <!-- 自定义ImageView界面的菜单栏显示 -->
    <string name="menu_zoom_save">保存</string>

</resources>
